# panopticas

./: .devalias  .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  LICENSE  README.md  pyproject.toml  requirements.txt
changes/: 20250707-layout-structure.md  20250707-line-counting-feature.md  20250707-metadata-function-refactoring.md  20250707-path-contains-rules.md  2026-02-docs-template-update.md  click-exit-2-error.md
docs/: Gemfile  _config.yml  api.md  index.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
docs/assets/css/: style.css
src/: panopticas.py  panopticas_cli.py  panopticas_filetype.py
src/panopticas/: __init__.py  cli.py  constants.py  core.py
