[build-system]
requires = ["setuptools>=76.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "panopticas"
version = "0.0.13"
description = "The panopticas file type and CLI tool."
authors = [{ name = "Peter Freiberg", email = "peter.freiberg@gmail.com" }]
dependencies = ["Click", "prettytable", "pathspec", "twine", "build"]
requires-python = ">=3.11"
readme = "README.md"
keywords = ["analytics", "git"]
license = "MIT"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]

[project.scripts]
panopticas = "panopticas.cli:cli"

[project.urls]
Homepage = "https://panopticas.io"
Issues = "https://github.com/kospex/panopticas/issues"
Repository = "https://github.com/kospex/panopticas"
