[build-system]
requires = ["setuptools>=76.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "panopticas"
version = "0.0.15"
description = "The panopticas file type and CLI tool."
authors = [{ name = "Peter Freiberg", email = "peter.freiberg@gmail.com" }]
dependencies = [
    "Click>=8.3.1",
    "prettytable>=3.17.0",
    "pathspec>=0.12.1",
]
requires-python = ">=3.12"
readme = "README.md"
keywords = ["analytics", "git"]
license = "MIT"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]

[project.scripts]
panopticas = "panopticas.cli:cli"

[project.urls]
Homepage = "https://panopticas.io"
Issues = "https://github.com/kospex/panopticas/issues"
Repository = "https://github.com/kospex/panopticas"
